--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'checkstyle'
 }
 
 group 'org.example'
@@ -10,7 +11,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+
+    implementation 'junit:junit:4.13.1'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.1.0'
@@ -22,10 +24,11 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-/*test {
-    systemProperty "file.encoding", "utf-8"
-    useJUnitPlatform()
-}*/
-/*test {
-    useJUnitPlatform()
-}*/
+apply plugin: 'checkstyle'
+checkstyle {
+    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
+}
+task Checkstyle(type: Checkstyle) {
+    include '**/*.java'
+    classpath = rootProject.files()
+}
